# python-dandelion-eu

./: .changelog-config.yaml  .composition.yaml  .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/: ISSUE_TEMPLATE.md
.github/workflows/: auto-pr.yaml  release.yaml
dandelion/: __init__.py  base.py  datagem.py  datatxt.py  sentiment.py  utils.py
dandelion/cache/: __init__.py  base.py  file.py
docs/: Makefile  base.rst  conf.py  datagem.rst  datatxt.rst  index.rst  sentiment.rst
tests/: base.py  data.json  datagem.py  datatxt.py  sentiment.py  utils.py
tests/cache/: __init__.py  base.py  file.py
