[metadata]
name = dandelion
version = attr:dandelion.__version__
description = Connect to the dandelion.eu API in a very pythonic way!
url = https://github.com/giacbrd/python-dandelion-eu
author = SpazioDati s.r.l.
author_email = berardi@spaziodati.eu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.9
long_description = file:README.md
long_description_content_type = text/markdown
keywords = dandelion

[options]
zip_safe=False
include_package_data=True
packages = find:

;[options.entry_points]
;console_scripts =
;    python-dandelion-eu = dandelion.cli:cli

[options.packages.find]
exclude =
    example*
    tests*
    docs*
    build

[flake8]
ignore = D203,W503
exclude =
    .git,
    .tox,
    docs,
    build,
    dist
max-line-length = 119

[darglint]
ignore=DAR402

[bumpversion]
current_version = 0.3.2
commit = True
commit_args = --no-verify
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+[-_\w]+?-(?P<dev>\d+))?
serialize =
    {major}.{minor}.{patch}+{$BRANCH_NAME}.{dev}
    {major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[bumpversion:file:dandelion/__init__.py]

[bumpversion:file(version heading):CHANGELOG.md]
search = Unreleased

[bumpversion:file(previous version):CHANGELOG.md]
search = {current_version}...HEAD
replace = {current_version}...{new_version}

[coverage:xml]
output = test-reports/coverage.xml

[coverage:html]
directory = test-reports/htmlcov
